--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="confusionApp">
+
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Portfolio Project Phase I</title>
+    <title>Serge Urakhchin Portfolio Site</title>
 
+<link rel="stylesheet" href="styles/main-f8781806cc.css"/>
+
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
+
 <body>
-<h1>Portfolio site  will be available soon</h1>
-<h2>In the mean time enjoy this funny animal compilation</h2>
 
+    <div ui-view="header"></div>
+    <div style="vertical-align: baseline" ui-view="content"></div>
+    <div ui-view="footer"></div>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/EXQbKJFmPXo" frameborder="0" allowfullscreen></iframe>
-
-<h3>Thanks for looking!</h3>
-<p>
-
-</p>
+<script src="scripts/main-864c442874.js"></script>
 
 </body>
-
-
 
 
 </html>
